test/visibility/rename/renameUsedMod/renameOnlyList2.good
renameOnlyList2.chpl:9: In function 'main':
renameOnlyList2.chpl:11: error: 'y' undeclared (first use this function)
